--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -21,3 +21,11 @@
 body {
   font-family: "Graphik LCG", sans-serif;
 }
+
+.title {
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 56px;
+
+  color: #191c1f;
+}
